# 02476_enzyme_stability

./: .gitignore  Makefile  README.md  cloudbuild.yaml  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
data/: processed.dvc
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_enzyme_stability/: __init__.py  predict_model.py  train_model.py
mlops_enzyme_stability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlops_enzyme_stability/data/: download_dataset.py  embedding.py  make_dataset.py  make_dataset_old.py  preprocess.py
mlops_enzyme_stability/models/: MLP.py  protBERT.py
outputs/2024-01-12/11-37-48/.hydra/: config.yaml  hydra.yaml
tests/: __init__.py  test_data.py  test_model.py
wandb/latest-run/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20240112_113750-y390ybbu/files/: conda-environment.yaml  config.yaml  requirements.txt
